[metadata]
name = data-rte-python-api
version = 0.0.1
description = Python wrapper for the RTE Data APIs
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/markdown
author = Viicos

[options]
packages_dir = 
    =src
packages = find:
install_requires =
    requests>=2.14.0
python_requires = >= 3.7

[options.packages.find]
where = src
